fix: move swagger
